resolucion de conflictos y limpieza de codigo

--- a/parte2/Práctica Parte II.Rmd
+++ b/parte2/Práctica Parte II.Rmd
@@ -115,7 +115,7 @@ mydf.numeric <- scale(mydf.numeric)
 pr.out <- prcomp(mydf.numeric, scale = TRUE)
 
 pr.out
-#Observando los primeros PC pueden extraerse relaciones entre las variables con valores más altos positiva o negativamente.
+# Observando los primeros PC pueden extraerse relaciones entre las variables con valores más altos positiva o negativamente.
 
 # En el PC1 se tiene que las variables más relevantes son:
 #-Bwd.Packet.Length.Max, 0.230922856
@@ -126,47 +126,51 @@ pr.out
 # Lo que indica que esta componente está relacionada con el tamaño de los paquetes tanto backward como forward, y las anteriores variables están relacionadas positivamente
 
 
-#En el PC2 se resaltan las siguientes variables:
+# En el PC2 se resaltan las siguientes variables:
 #-Bwd.Packet.Length.Mean, 0.155033239
 #-Bwd.Packet.Length.Max, 0.131454508
 #-Flow.IAT.Mean, -0.229527468
 #-Flow.Duration, -0.241615961
 
-#Esta componente relaciona la longitud de los paquetes backward y parámetros del flujo. Cuanto mayor es la longitud de los paquetes, menor es la media de IAT y la duración del flujo.
+# Esta componente relaciona la longitud de los paquetes backward y parámetros del flujo. Cuanto mayor es la longitud de los paquetes, menor es la media de IAT y la duración del flujo.
 
 # Vemos la varianza explicada
 summary(pr.out)
 
 
 
-#Calculamos las varianzas de cada componente principal
-pc.var=pr.out$sdev^2 
+# Calculamos las varianzas de cada componente principal
+pc.var <- pr.out$sdev^2
 
-#Ahora podemos calcular el PVE = Proportion of Variance Explained
-pve = pc.var/sum(pc.var)
+# Ahora podemos calcular el PVE = Proportion of Variance Explained
+pve <- pc.var / sum(pc.var)
 
-#Con esto graficamos cómo varían el PVE y el PVE acumulado en función del número de componentes principales
+# Con esto graficamos cómo varían el PVE y el PVE acumulado en función del número de componentes principales
 par(mfrow = c(1, 2))
- plot(pve, xlab = "Principal Component",
- ylab = "Proportion of Variance Explained", ylim = c(0, 1),
- type = "b")
- plot(cumsum(pve), xlab = "Principal Component",
- ylab = "Cumulative Proportion of Variance Explained",
- ylim = c(0, 1), type = "b")
- 
+plot(pve,
+  xlab = "Principal Component",
+  ylab = "Proportion of Variance Explained", ylim = c(0, 1),
+  type = "b"
+)
+plot(cumsum(pve),
+  xlab = "Principal Component",
+  ylab = "Cumulative Proportion of Variance Explained",
+  ylim = c(0, 1), type = "b"
+)
+
 # Seleccionamos las componentes principales que expliquen al menos el 80% de la varianza
 ncomp <- which(cumsum(pve) > .8)[1]
 ncomp
 
-#Con estos componentes podemos realizar un biplot, que resultará más legible que con todas las componentes principales elegidas
+# Con estos componentes podemos realizar un biplot, que resultará más legible que con todas las componentes principales elegidas
+pr.out$x <- pr.out$x[1:10, ]
 
-pr.out$x <- pr.out$x[1:3,]
-
-#Elegimos los componentes a representar
+# Elegimos los componentes a representar
 pr.out$rotation <- pr.out$rotation[1:ncomp, ]
 
-biplot(pr.out, scale=0)
-#Con 11 componentes sigue viéndose borroso
+par(mfrow = c(1, 1))
+biplot(pr.out, scale = 0)
+# Con 11 componentes sigue viéndose borroso
 
 
 #-------------------------------------------
@@ -193,19 +197,14 @@ train <- mydf[train_indices, ]
 
 
 ```{r}
+# 4
 
-#4
+# Este problema sí podría resolverse con un algoritmo de regresión
 
-#Este problema sí podría resolverse con un algoritmo de regresión
+# Dado que estamos antes un problema de clasificación binaria, el método de regresión que podemos usar es la regresión logística, especialmente una regresión logística múltiple al tener más de un predictor.
 
-#Dado que estamos antes un problema de clasificación binaria, el método de regresión que podemos usar es la regresión logística, especialmente una regresión logística múltiple al tener más de un predictor.
+# Vamos a crear un modelo de este tipo de regresión.
 
-#Vamos a crear un modelo de este tipo de regresión.
-
-lr<-glm(Class~.,data= mydf,family=binomial)
-
-
-
-
+lr <- glm(Class ~ ., data = mydf, family = binomial)
 ```
 
