--- a/parte2/Práctica Parte II.Rmd
+++ b/parte2/Práctica Parte II.Rmd
@@ -1,15 +1,22 @@
 ---
 title: "Práctica Parte II. Aprendizaje Estadístico"
 author: "Antonio Galián Gálvez, Juan Luis Serradilla Tormos"
-date: "2024-12-03"
-output: html_document
+date: "`r Sys.Date()`"
+output:
+  html_document:
+    df_print: paged
+    highlight: kate
+    number_sections: yes
+    theme: spacelab
+    toc: yes
+    toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
+Lo primero es importar las librerías necesarias y configurar el directorio de trabajo. También se seleccionará una misma semilla aleatoria para todo el cuaderno.
 ```{r}
 # Seleccioamos el directorio actual como directorio de trabajo
 # Si estamos compilando no lo hacemos para que no de error la compilación
@@ -19,222 +26,157 @@ if (interactive()) {
 
 # Cargamos las librerías necesarias
 library(summarytools)
+library(magrittr)
 
 # Seleccionamos la semilla aleatoria para todo el cuaderno
 set.seed(12345)
 ```
 
-Una vez se han importado las librerías, lo primero que debemos realizar es la lectura de los datos. En este caso partimos del ejemplo reducido 'sampled.csv'.
+# 1. Agrupar todas las variables del conjunto por temática, describiendo lo que significa cada uno de los grupos de características que has identificado. Se pide básicamente, terminar el trabajo empezado arriba cuando se han descrito las características relativas al flujo, a los paquetes del flujo, y tiempo transcurrido entre paquete y paquete. Identifica y describe las ya identificadas arriba junto con las que faltan. Dentro de las características de cada conexión, para la mayoría de categorías de características, se distingue entre características forward y backward. Explicar en que se diferencian unas de otras y mencionar las referencias documentales que se han usado para responder. Desde el punto de vista del análisis de datos, ¿es relevante diferencia entre características forward y backward? ¿Por qué?
+
+# 2. Plantear y ejecutar una estrategia que te permita trabajar con el conjunto de datos de manera holgada si tener que usar necesariamente los 90K ejemplos en memoria.
+Para poder trabajar con el datastet de manera holgada, es conveniente crear un subconjunto de datos que sea manejable. Para ello, se puede seleccionar un número de filas aleatorio que sea manejable y que permita realizar el análisis de manera eficiente. Este subconjunto de datos deberá tener la misma distribución de casos positivos y negativos que el dataset original para no desbalancear el modelo. Para conseguir esto basta con escoger una muestra aleatoria de, por ejemplo, un 10% de las filas del dataset original con una probabilidad uniforme y sin reemplazo.
+
+Una forma de hacerlo puede ser con el código proporcionado:
+```bash
+awk 'BEGIN {srand()} NR==1 {print > "sampled.csv"; next} rand() <= 0.1 {print >> "sampled.csv"}' Keylogger_Detection.csv
+```
+
+Otra forma, aunque más lenta, sería cargar todo el dataset con R y seleccionar las filas aleatorias con la función `r sample()`. A continuación se muestra un ejemplo de cómo hacerlo con R:
+```{r}
+# Cargamos el dataset
+mydf <- read.csv("Keylogger_Detection.csv", header = TRUE, sep = ",")
+
+# Seleccionamos un 10% de las filas
+sampled <- mydf[sample(nrow(mydf), nrow(mydf) * 0.1), ]
+
+# Guardamos el subconjunto de datos
+write.csv(sampled, "sampled_2.csv", row.names = FALSE)
+```
+
+Antes de realizar el sampleo del dataset, es necesario preprocesar los datos. De esta forma, guardaremos los datos listos para trabajar. En este preprocesamiento, se eliminarán las columnas que no aportan información relevante, se eliminarán las filas con valores nulos, se eliminarán las filas duplicadas, se convertirán las variables a un formato adecuado, y se eliminarán las variables constantes. Una vez realizado este preprocesamiento, se procederá a realizar el sampleo del dataset.
+
+## 2.1. Preprocesamiento del dataset
+Cargamos los datos del dataset.
 ```{r}
 # Cargamos los datos
-mydf <- read.csv("sampled.csv", header = TRUE, sep = ",")
-
+mydf <- read.csv("Keylogger_Detection.csv", header = TRUE, sep = ",")
 ```
 
-Dado que al leerse el fichero .csv es generada una columna de nombre "X" a modo de índice, la borramos porque resulta redundante.´
-
+Vemos el tipo de variables que hay dentro del dataset para comprobar cuáles no aportan información relevante.
 ```{r}
-# Eliminamos la columna X, que es la columna de los índices
-mydf <- mydf[, names(mydf) != "X"]
+# Realizamos un resumen del DataFrame
+print(dfSummary(mydf), method = "render")
+
+# Eliminamos las variables que no aportan información relevante
+vars.to.remove <- c("X", "Flow.ID", "Timestamp", "Source.IP", "Destination.IP", "Source.Port", "Destination.Port")
+mydf <- mydf[, !names(mydf) %in% vars.to.remove]
 ```
 
+Se pueden ver algunas variables que no aportan información relevante, como "X", "Flow.ID", "Timestamp", "Source.IP", "Destination.IP", "Source.Port" y "Destination.Port".
+- "X" es un índice que no aporta información relevante.
+- "Flow.ID" es un identificador del flujo, por lo que no es una característica como tal.
+- "Timestamp" es un instante temporal, no es una característica del flujo y por tanto no aporta información relevante.
+- "Source.IP" y "Destination.IP" son identificadores de los dispositivos fuente y destino, respectivamente, y no son características del flujo. No aportan información al análisis. Además, no pueden interpretarse como variables ni numéricas ni categóricas (ya que tendráinn demasiados valores únicos), y no se puede realizar un análisis siendo variables de tipo character.
+- "Source.Port" y "Destination.Port" son los puertos de origen y destino, respectivamente, y no son características del flujo. No aportan información al análisis. No pueden interpretarse como variables categóricas (ya que tendrían demasiados valores únicos), y no dan información real de tipo numérico.
 
 
-El dataset es muy grande, tanto en el número de medidas como en el de predictores. Lo más conveniente es realizar un preprocesamiento de los datos para quedarnos solamente con la información relevante. Este filtrado constará de varios pasos, ya que existen distintos aspectos que pueden depurarse. Los dos primeros serán relativos a las filas, y los dos siguientes a las columnas. Empezamos por el tratamiento de las filas.
-
-El primero paso respecto el depuramiento de las filas será eliminar aquellas donde existan valores nulos, es decir, de tipo NA. Para esto debemos averiguar primero cúantos existen en el dataset y la proporción que suponen respecto al conjunto total de datos.
+Una vez hemos eliminado las variables que no aportan información relevante, pasamos a eliminar las filas con valores nulos. Antes de nada, hay que comprobar que no vayamos a eliminar una gran cantidad de filas.
 ```{r}
-# Vemos la cantidad de datos nulos presentes en los datos
-na.number <- sum(is.na(mydf))
-na.prop <- na.number / nrow(mydf) / ncol(mydf) * 100
-paste("La proporcion de nulos es: ", na.prop, "%", sep = "")
-```
-El número total de valores nulos son 117, y son un 0.0026% de la cantidad total de datos, lo que resulta muy favorable al ser tan pequeño. Ahora bien, dado que la manera de proceder será eliminar sus filas debemos averiguar en cuáles de ellas se encuentran. Además, es importante saber a qué valor de la columna Class corresponden estas filas, para no desbalancear la proporción de las categorías de Class presente en el dataset. Vemos en primer lugar cuál es esta proporción originalmente, incluyendo todos los datos.
-
-```{r}
-# Vemos la proporción de clases en la columna a predecir
-proptable.old <- round(prop.table(table(mydf$Class))*100,2)
-proptable.old
-```
-Un 59.14% de filas son de tipo 'Benign' y un 40.86% son de tipo "Keylogger". La proporción es desigual pero no está excesivamente desbalanceada.
-
-Vemos ahora las filas distntas en las que se encuentran los valores nulos.
-
-```{r}
-# Primero vemos las coordenadas de los valores nulos
+# Buscamos las filas con valores nulos
 na.coordinates <- which(is.na(mydf), arr.ind = TRUE)
 
 # Vemos las distintas filas en las que se encuentran
 na.rows <- unique(na.coordinates[, "row"])
-na.rows
 
 # Calculamos la proporción respecto al número total de filas
 na.prows <- length(na.rows) / nrow(mydf) * 100
 paste("El porcentaje de filas con nulos es: ", na.prows, "%", sep = "")
-
 ```
-Resulta que todos los NA están concentrados en 3 filas, las cuales suponen un 0.0057% respecto al número total de filas, lo que implica que no se perderá apenas información. Comprobamos ahora la clase de estas 3 filas.
 
+Vemos que el porcentaje de filas a eliminar es muy bajo, así que eliminamos las filas con valores NA del DataFrame.
 ```{r}
-
-# De las tres filas, vemos cuáles son de la clase "Benign" y cuales de "Keylogger"
-mydf[na.rows, ]$Class
-
-```
-Las 3 filas son de la misma clase, "Keylogger", pero igualmente pueden eliminarse ya que no afectarán mucho a la proporción entre clases. Eliminamos las filas y comprobamos que es así.
-
-```{r}
-# Todas son de Keylogger, pero al ser solo 3, podemos eliminar dichas filas.
+# Eliminamos las filas con valores nulos
 mydf <- na.omit(mydf)
-
-# Comprobamos de nuevo la proporción de la aparición de ambos
-proptable.new <- round(prop.table(table(mydf$Class))*100,2)
-proptable.old
-proptable.new
 ```
-La diferencias que existen en las proporciones son de un 0.01% mayor en la clase "Benign" y un 0.01% menor en la clase "Keylogger", por lo que es completamente justificable la acción que hemos tomado.
 
-La segunda acción que tomamos respecto a las filas es averiguar cuáles se encuentran repetidas, y acto seguido, eliminarlas. De esta manera podemos liberarnos de información redundante.
-
-```{r}
-# Comprobamos si existen filas duplicadas
-dup.nrows <- sum(duplicated(mydf))
-dup.prows <- round(dup.nrows / nrow(mydf) * 100,2)
-dup.nrows
-paste("El porcentaje de filas duplicadas es: ", dup.prows, "%", sep = "")
-```
-Tenemos 7089 filas duplicadas, un 13.49% del total. Las eliminamos.
-
+Ahora, eliminamos las filas duplicadas.
 ```{r}
 # Eliminamos las filas duplicadas
 mydf <- mydf[!duplicated(mydf), ]
 ```
 
-Pasamos ahora al preprocesamiento de las columnas. El primer paso es echar un vistazo general a sus características.
-
+Vamos a eliminar las columnas con desviación estándar cero. Para ello, psaremos a numérico todas las variables que no sean claramente carácteres.
 ```{r}
-print(dfSummary(mydf),method="render")
+# Pasamos a numérico las variables que les corresponde
+mydf$Packet.Length.Std <- as.numeric(mydf$Packet.Length.Std)
 ```
 
-Existen variables que por su naturaleza en este contexto sabemos que no serán útiles para nuestra predicción, así que es conveniente prescindir de ellas.
-
--Flow.ID. Es un identificador del flujo, por lo que no es una característica como tal.
-
--Timestamp. Al tratarse de un instante temporal, no es cualidad intínseca del flujo.
-
--Source.IP. Esto es un identificador del dispositivo fuente, lo cual no caracteriza el flujo en sí.
-
--Destination.IP. Análogamente a la variable anterior, es un identificador del dispositivo de destino, y no es una característica del flujo.
-
--Source.Port. Esta variable identifica el puerto de la fuente, lo que no determina cómo es el flujo en sí.
-
--Destination.Port. De forma análoga a la variable anterior, esto identifica el puerto del destino, por lo que no caracteriza el flujo.
-
-(Falta refinar todo lo anterior para justificar cómo realmente no influyen en las cualidades del flujo)
-
-Las eliminamos por tanto.
+Al analizar las variables vemos que hay una con una situación particular. Esta es "CWE.Flag.Count", que tiene valores "0" y "0.0". Además, los valores "0.0" no son pocos, suponen el 6% del total, más que los valores "1" de otros Flags como "FIN.Flag.Count", que solo el 1.7% son valores 1. Esto puede deberse a que por un error los valores 0.0 deberían ser 1. Si fuera un error de tipografía que pasará algunos valores 0 a 0.0 no habría tantos casos. Por lo tanto, se convertirán los valores "0.0" a "1" para que siga el formato común con los otros Flags.
 
 ```{r}
+# Convertimos los "0.0" a 1
+mydf$CWE.Flag.Count <- ifelse(mydf$CWE.Flag.Count == "0.0", "1", mydf$CWE.Flag.Count)
 
-# Eliminamos las variables que no tengan relevancia en nuestro contexto
-vars.to.remove <- c("Flow.ID", "Timestamp", "Source.IP", "Destination.IP", "Source.Port", "Destination.Port")
-mydf <- mydf[, !names(mydf) %in% vars.to.remove]
+# Pasamos a numérico la variable
+mydf$CWE.Flag.Count <- as.numeric(mydf$CWE.Flag.Count)
 
-```
+# Seleccionamos las columnas numéricas
+num_cols <- which(sapply(mydf, is.numeric))
 
-Una vez hemos eliminado estas variables pasamos a comprobar si todas las restantes están en el formato adecuado ('numeric','factor', etc.). Este paso es necesario para el filtrado de variables constantes que realizaremos más adelante.
+# Obtenemos las columnas con desviaciones estándar nulas
+constant_cols <- which(sapply(mydf[, num_cols], sd) == 0)
 
-```{r}
-str(mydf)
+# Eliminamos las columnas con valores constantes
+mydf <- mydf[, -constant_cols]
 ```
 
 
-La primera variable que debemos pasar a un formato adecuado es la de salida, "Class", ya que originalmente aparece como "character". Será necesario convertirla a "factor" dado que se trata de categorías.
-
-```{r}
-# Pasamos Class a factor
-mydf$Class <- as.factor(mydf$Class)
-```
-
-Algunas variables de entrada numéricas presentan un rango de entre 0 y 1, lo que induce a pensar que realmente se tratan de variables binarias, por lo que deben ser convertidas a factor.
-
-```{r}
-# Pasamos los que son de rango 0-1 a factor
-mydf$Fwd.PSH.Flags <- as.factor(mydf$Fwd.PSH.Flags)
+Finalmente, volvemos a hacer una revisión de las variables del dataset y asignamos los tipos correspondientes a cada variable.
+```{r, eval=FALSE}
+# Pasamos los que tienen valores 0, 1 a factor.
+mydf$Fwd.PSH.Flags  <- as.factor(mydf$Fwd.PSH.Flags)
 mydf$FIN.Flag.Count <- as.factor(mydf$FIN.Flag.Count)
 mydf$SYN.Flag.Count <- as.factor(mydf$SYN.Flag.Count)
 mydf$PSH.Flag.Count <- as.factor(mydf$PSH.Flag.Count)
 mydf$ACK.Flag.Count <- as.factor(mydf$ACK.Flag.Count)
 mydf$URG.Flag.Count <- as.factor(mydf$URG.Flag.Count)
-mydf$SYN.Flag.Count <- as.factor(mydf$SYN.Flag.Count)
-```
-
-De las variables numéricas restantes existe una que, dada su naturaleza, encaja más como factor que como número. Se trata de "Protocol", y, como su nombre indica, hace referencia al protocolo usado en el flujo. Al existir distintos tipos de protocolos, puede entenderse esta variable como una variable categórica. La pasamos por tanto a factor.
-
-```{r}
-
-# Cambiamos "Protocol" a factor
-mydf$Protocol <- as.factor(mydf$Protocol)
-
-```
-
-Existe una variable definida como "character" llamada "CWE.Flag.Count", cuyos posibles valores son "0" y "0.0". Dado que forma parte del grupo de variables categóricas que contienen "Flag.Count", es bastante probable que "CWE.Flag.Count" también sea de este tipo y que haya existido un error en la codificación de los valores binarios 0 y 1. Lo solucionaremos conviertiendo "0.0" a 1, de manera que pueda seguir el formato común.
-
-```{r}
-
-#Convertimos los "0.0" a 1
-mydf$CWE.Flag.Count <- ifelse(mydf$CWE.Flag.Count == "0.0", "1",mydf$CWE.Flag.Count)
-
-#Pasamos la variable a factor
 mydf$CWE.Flag.Count <- as.factor(mydf$CWE.Flag.Count)
-
-```
-
-Ahora que todas las variables de tipo "numeric" son realmente variables numéricas, lo último que hay que hacer es eliminar las que tienen desviación estándar nula.
-
-
-```{r}
-
-# Seleccionamos las columnas numéricas
-num_cols <- which(sapply(mydf, is.numeric))
-
-# Obtenemos las dcolumnas con desviaciones estandar nulas
-constant_cols <- which(sapply(mydf[, num_cols], sd) == 0)
-constant_cols <- num_cols[constant_cols]
-
+mydf$Class          <- as.factor(mydf$Class)
 ```
 
 
-Existen un total de 11 columnas númericas constantes. Las eliminamos.
+## 2.2. Sampleo del dataset
+Ahora que tenemos el dataset preprocesado vamos a guardar el dataset en un fichero .csv para poder trabajar con él en el futuro. Además, crearemos un dataset con un 10% de las filas del dataset original para poder trabajar con él de manera holgada.
+```{r, eval=FALSE}
+# Guardamos el dataset preprocesado
+write.csv(mydf, "preprocessed.csv", row.names = FALSE)
 
-```{r}
+# Seleccionamos un 10% de las filas
+sampled <- mydf[sample(nrow(mydf), nrow(mydf) * 0.1), ]
 
-# Eliminamos las columnas con valores constantes
-mydf <- mydf[, -constant_cols]
-
+# Guardamos el subconjunto de datos
+write.csv(sampled, "sampled_preprocesed.csv", row.names = FALSE)
 ```
 
+Comprobamos que el dataset sampleado tiene la misma proporción de casos positivos y negativos que el dataset original.
+```{r, eval=FALSE}
+# Comprobamos la proporción de casos positivos y negativos en el dataset original
+prop.table(table(mydf$Class)) * 100
 
-Con esto ya hemos terminado el preprocesamiento. Podemos observar de qué tamaño es nuestro dataset preprocesado y listo para el análisis.
-
-```{r}
-
-dim(mydf)
+# Comprobamos la proporción de casos positivos y negativos en el dataset sampleado
+prop.table(table(sampled$Class)) * 100
 ```
 
+Vemos que la proporción de casos positivos y negativos en el dataset sampleado es prácticamente la misma que en el dataset original. Por tanto, el dataset sampleado es válido para trabajar con él.
 
+# 3. Elabora un análisis no supervisado (PCA) de las conexiones y explica lo que ves. ¿Cómo dirías que va a ser el problema de la elaboración de un modelo de clasificación que identifique conexiones de keystrokes en términos de dificultad? Razona la respuesta.
 
-
-# Apartado PCA
-
-
-
-
-
-
-
+Vamos a realizar el PCA con el conjunto preprocesado. Para ello, primero cargamos los datos preprocesados.
 ```{r}
 # Realizamos PCA
+
+
 
 # Seleccionamos las columnas numéricas
 mydf.numeric <- mydf[, sapply(mydf, is.numeric)]
@@ -350,17 +292,17 @@ train <- mydf[train_indices, ]
 # Dado que estamos antes un problema de clasificación binaria, el método de regresión que podemos usar es la regresión logística, especialmente una regresión logística múltiple al tener más de un predictor.
 
 # Vamos a crear un modelo de este tipo de regresión.
-mydf.lr <- mydf[,sapply(mydf,is.numeric)]
+mydf.lr <- mydf[, sapply(mydf, is.numeric)]
 
 mydf.lr$Class <- mydf$Class
 
 str(mydf)
 
-lr <- glm(Class ~ ., data = mydf.lr,family=binomial)
+lr <- glm(Class ~ ., data = mydf.lr, family = binomial)
 
 summary(lr)
 
-lr.probs<-predict(lr,type="response")
+lr.probs <- predict(lr, type = "response")
 
 
 # Creamos un dataset con variables numéricas y factores
